--- a/_sass/color_schemes/mion.scss
+++ b/_sass/color_schemes/mion.scss
@@ -23,13 +23,13 @@ $link-color: #008550; // $mion-green-accessible;
     font-family: 'Exo 2';
     font-style: normal;
     font-weight: 400;
-    src: url('assets/fonts/exo-2-v9-latin-regular.eot'); /* IE9 Compat Modes */
+    src: url('/assets/fonts/exo-2-v9-latin-regular.eot'); /* IE9 Compat Modes */
     src: local(''),
-         url('../fonts/exo-2-v9-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-         url('../fonts/exo-2-v9-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
-         url('../fonts/exo-2-v9-latin-regular.woff') format('woff'), /* Modern Browsers */
-         url('../fonts/exo-2-v9-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
-         url('../fonts/exo-2-v9-latin-regular.svg#Exo2') format('svg'); /* Legacy iOS */
+         url('/assets/fonts/exo-2-v9-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+         url('/assets/fonts/exo-2-v9-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
+         url('/assets/fonts/exo-2-v9-latin-regular.woff') format('woff'), /* Modern Browsers */
+         url('/assets/fonts/exo-2-v9-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
+         url('/assets/fonts/exo-2-v9-latin-regular.svg#Exo2') format('svg'); /* Legacy iOS */
   }
 
 h1, h2, h3 {
